--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,14 @@
 <h1>Lists#new</h1>
 
+<% if @list.errors.any? %>
+  <%= @list.errors.count %>errors occured!
+  <ul>
+    <% @list.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @list, url: "/lists", method: :post do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
