--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,9 +7,9 @@
 <p><%= @list.body %></p>
 
 <h2>Image</h2>
-<% if @list.image.attached? %>
-  <p><%= image_tag @list.image, size: "200x200" %></p>
-<% else %>
-  <p><%= image_tag "no_image", size: "200x200" %></p>
- <% end %>
+<p><%= image_tag @list.image, size: "200x200" %></p>
+
+<!--編集・削除画面へのリンク-->
 <p><%= link_to "Edit", edit_list_path(@list.id) %></p>
+<p><%= link_to "Delete", list_path(@list.id), method: :delete, "data-confirm"=>"Are you sure?" %></p>
+
